# smart-estate

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
analysis/: price_analysis.py
analysis/prediction/: model_predict.py  model_train.py
config/: database.yml  redis.yml
crawler/: scrapy.cfg
crawler/estate_spider/: items.py  middlewares.py  pipelines.py  settings.py
crawler/estate_spider/spiders/: lianjia.py
database/: init_db.sql  seed_data.py
scripts/: init_project.py  run_analysis.py  seed_django.py  start_crawler.py
web/: settings.py  urls.py  wsgi.py
web/apps/analysis/: apps.py  urls.py  views.py
web/apps/home/: apps.py  urls.py  views.py
web/apps/house/: apps.py  crawler_views.py  models.py  urls.py  views.py
web/apps/house/migrations/: 0001_initial.py
web/apps/prediction/: apps.py  urls.py  views.py
web/static/css/: style.css
web/templates/: base.html  city.html  home.html
web/templates/analysis/: compare.html  index.html
web/templates/crawler/: index.html
web/templates/house/: detail.html  district.html  list.html  search.html
web/templates/prediction/: index.html
