[project]
name = "smart-estate"
version = "1.0.0"
description = "智慧房产探索平台 - 基于大数据分析的智能房产信息服务平台"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2,<5.0",
    "djangorestframework>=3.15",
    "PyMySQL>=1.1",
    "redis>=5.0",
    "Scrapy>=2.11",
    "scrapy-redis>=0.7",
    "requests>=2.32",
    "lxml>=5.3",
    "fake-useragent>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]
